--- a/multi-panel-page/styles.css
+++ b/multi-panel-page/styles.css
@@ -30,6 +30,22 @@ h3{
    font-size: 20px;
 }
 
+h4{
+   text-align: center;
+   margin: 0;
+   font-size: 25px;
+   line-height:1.44em;
+   font-weight: 600;
+}
+
+h5{
+   margin: 0;
+   font-size:17.5px;
+   font-weight: 600;
+   line-height: 1.5em;
+   padding: 40px 0;
+}
+
 .section2{
    padding-top:50px;
    padding-bottom: 50px;
@@ -39,9 +55,24 @@ h3{
 .section3{
    padding-top: 35px;
    padding-bottom: 35px;
+   background-color:#FE9D6D;
 }
 
-section>div{
+.section4{
+   padding-top:55px;
+   padding-bottom: 100px;
+   background-color:#DA6D91;
+}
+
+footer{
+   background-color: #3F317A;
+}
+
+.section4>div{
+   width: 710px;
+}
+
+footer>div, section>div{
    width:960px;
    margin: 0 auto;
 }
@@ -60,23 +91,15 @@ p{
 
 .grid{
    width: 100%;
-}
-
-.col2{
-   padding:0;
-   display: block;
-   flex-wrap: wrap;
-}
-
-.col2>li{
-   display:block;
-   width: 50%;
+   display: grid;
+   grid-template-columns: 50% 50%;
 }
 
 .col{
    padding:0;
    display: flex;
    flex-wrap: wrap;
+   margin:0;
 }
 
 .col li{
