--- a/exercises/building-a-button/styles.css
+++ b/exercises/building-a-button/styles.css
@@ -4,7 +4,7 @@ header{
     left: 0;
     width: 100%;
     height: 200px;
-    background: #000;
+    background: linear-gradient(to bottom, #000000 40%, #0560aa 80%,#7cd4ef 100%);
 }
 
 body{
@@ -13,7 +13,7 @@ body{
 
 .launch-button{
     text-decoration: none;
-    background: linear-gradient(to bottom, #000000 40%, #0560aa 80%,#7cd4ef 100%);
+    background-color: #aa0000;
     color: white;
     font-size: 20px;
     padding: 15px 60px 15px 30px;
