--- a/microsite/initial-build/css/index.css
+++ b/microsite/initial-build/css/index.css
@@ -2,31 +2,28 @@ html{
     font-family: "Tiny5", serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 24pt;
+    font-size: 16pt;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 body{
-    background: url("/microsite/initial-build/pic/sapce.jpeg") cover no-repeat;
+    background: url("/pic/sapce.jpeg") no-repeat;
+    background-size: cover;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    text-align: center;
-}
-
-.menu{
+header{
     position: relative;
     height: 50px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px 20px;
 }
 
-.menu_btn{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 10px 15px;
+.travel_btn{
+    padding: 10px 20px;
     font-size: 1rem;
     color: white;
     font-family: "Tiny5", serif;
@@ -35,23 +32,25 @@ body{
 }
 
 main{
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 footer{
-    padding: 10px 0 5px 0;
+    padding: 10px 0;
     text-align: center;
 }
 
 h1{
     font-family: "Jacquard 24", serif;
     font-weight: 400;
-    font-size: 5rem;
+    font-size: 9rem;
     color: white;
-    margin: 0;
+    margin: 10rem 0 0 0;
     word-wrap: break-word;
 }
 
@@ -61,6 +60,11 @@ h2{
     font-style: normal;
     font-size: 1.5rem;
     margin: 40px 0 0 0;
+    color: white;
+}
+
+a{
+    text-decoration: none;
     color: white;
 }
 
