--- a/microsite/initial-build/css/index.css
+++ b/microsite/initial-build/css/index.css
@@ -1,35 +1,8 @@
-html{
-    font-family: "Tiny5", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 16pt;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
 
 body{
-    background: url("/microsite/initial-build/pic/sapce.jpeg") no-repeat;
+    background: url(/microsite/initial-build/pic/sapce.jpeg) no-repeat;
     height: 100%;
     background-size: cover;
-}
-
-header{
-    position: relative;
-    height: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 10px 20px;
-}
-
-.travel_btn{
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: white;
-    font-family: "Tiny5", serif;
-    cursor: pointer;
-    border: none;
 }
 
 main{
@@ -46,29 +19,3 @@ footer{
     text-align: center;
 }
 
-h1{
-    font-family: "Jacquard 24", serif;
-    font-weight: 400;
-    font-size: 5rem;
-    color: white;
-    margin: 10rem 0 0 0;
-    word-wrap: break-word;
-}
-
-h2{
-    font-family: "Tiny5", serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.5rem;
-    margin: 40px 0 0 0;
-    color: white;
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-
-p{
-    color: white;
-}
